@@ -236,7 +236,7 @@ src_libmingwex=\
   intrincs/writecr4.c       intrincs/writecr8.c       intrincs/writemsr.c        intrincs/RtlSecureZeroMemory.c \
   \
   secapi/_cgets_s.c secapi/_cgetws_s.c \
-  secapi/_cprintf_s.c
+  secapi/_cprintf_s.c secapi/_cprintf_s_l.c
 
 # these only go into the 64 bit version:
 src_libmingwex64=\
