@@ -1,3 +1,11 @@
+2012-08-01  Kai Tietz  <ktietz@redhat.com>
+
+	* secapi/_cprintf_s_l.c: New file.
+	* Makefile.am: Add new file.
+	* Makefile.in: Regenerated.
+	* lib32/msvcrt.def: Commented symbol.
+	* lib64/msvcrt.def: Likewise.
+
 2012-07-31  Kai Tietz  <ktietz@redhat.com>
 
 	* secapi/: New folder.
